--- a/style.css
+++ b/style.css
@@ -1,16 +1,36 @@
 /* Global ================= */
 :root{
    --dark-blue: #363f5f;
+   --green: #50cc23;
+   --light-green: rgb(125, 12, 231);
+   --red: #e92929;
 }
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+   font-family: 'Poppins', sans-serif;
 }
 
+html{
+   font-size: 93.75%; /* é o mesmo que 15px */
+}
 body {
    background-color: #f0f0f5;
-   font-family: 'Poppins', sans-serif;
+}
+
+/* A classe abaixo é uma CSS Trick para deixar o elemento oculto aos usuários, 
+mas visível para os mecanismos de leitura de tela*/
+.sr-only {
+   position: absolute;
+   width: 1px;
+   height: 1px;
+   padding: 0;
+   margin: -1px;
+   overflow: hidden;
+   clip: rect(0,0,0,0);
+   white-space: nowrap;
+   border-width: 0;
 }
 
 .container {
@@ -27,9 +47,67 @@ h2 {
    font-weight: normal;
 }
 
+/* Links and Buttons ================= */
+a {
+   color: var(--green);
+   text-decoration: none;
+}
+
+a:hover{
+   transition: .3s;
+
+   color: var(--light-green);
+}
+
+button {
+   width: 100%;
+   height: 50px;
+
+   border: none;
+
+   color: white;
+   background: var(--green);
+
+   padding: 0;
+
+   border-radius: .25rem;
+
+   cursor: pointer;
+}
+
+button:hover {
+   transition: .3s;
+   background: var(--light-green);
+}
+
+.button.cancel {
+   color: var(--red);
+   border: 2px var(--red) solid;
+   border-radius: .25rem;
+
+   height: 50px;
+
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   
+   opacity: .6;
+}
+
+.button.cancel:hover{
+   opacity: 1;
+}
+
+/*procura pelo elemento que tenha as duas classes abaixo*/
+.button.new {
+   display: inline-block;
+   margin-bottom: .8rem;
+}
+
+
 /* Header ================= */
 header {
-   background-color: blueviolet;
+   background-color: rgb(95, 46, 141);
    padding: 2rem 0 10rem;
    text-align: center;
 }
@@ -41,7 +119,7 @@ header {
 
 /* Balance ================= */
 #balance{
-   margin-top: -8rem;
+   margin-top: -5rem;
 }
 
 #balance h2{
@@ -64,6 +142,10 @@ header {
 .card h3{
    font-weight: normal;
    font-size: 1rem;
+
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
 }
 
 .card p{
@@ -80,6 +162,12 @@ header {
 
 
 /* Table ================= */
+#transactions{
+   display: block;
+   width: 100%;
+   overflow-x: auto;
+}
+
 #data-table{
    width: 100%;
    border-spacing: 0 0.5rem;
@@ -98,6 +186,11 @@ table th{
 table thead tr th:first-child,
 table tbody tr td:first-child {
    border-radius: .25rem 0 0 .25rem;
+}
+
+table thead tr th:last-child,
+table tbody tr td:last-child {
+   border-radius: 0 .25rem .25rem 0;
 }
 
 table tbody tr {
@@ -123,7 +216,83 @@ td.income{
 }
 
 td.expense {
-   color: #e92929;
+   color: var(--red);
+}
+
+/* Modal ================= */
+.modal-overlay {
+   width: 100%;
+   height: 100%;
+
+   background-color: rgba(0,0,0,.6);
+
+   position: fixed; 
+   z-index: 999;
+   top: 0;
+
+   display: flex;
+   align-items: center;
+   justify-content: center;
+
+   opacity: 0;
+   visibility: hidden;
+}
+
+.modal-overlay.active {
+   transition: .2s;
+   opacity: 1;
+   visibility: visible;
+}
+
+.modal {
+   background: #F0f2f5;
+   padding: 2.4rem;
+
+   position: relative;
+   z-index: 1;
+
+   max-width: 500px;
+   width: 90%;
+
+   border-radius: .2rem;
+}
+
+
+/* Form ================= */
+#form {
+   max-width: 500px;
+}
+
+#form h2 {
+   margin-top: 0;
+}
+
+#form input{
+   border: none;
+   border-radius: 0.2rem;
+
+   padding: .8rem;
+
+   width: 100%;
+}
+
+.input-group {
+   margin-top: .8rem;
+}
+
+.input-group small{
+   opacity: .5;
+}
+
+.input-group.actions {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+}
+
+.input-group.actions button,
+.input-group.actions .button.cancel{
+   width: 48%;
 }
 
 /* Footer ================= */
@@ -134,4 +303,18 @@ footer {
    color: var(--dark-blue);
 
    opacity: .6;
+}
+
+
+/* Responsive ================= */
+@media (min-width: 800px) {
+   html {
+      font-size: 87.5%; /* equivale a 14px */
+   }
+
+   #balance {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 2rem;
+   }
 }
